--- a/homepage.html
+++ b/homepage.html
@@ -7,5 +7,6 @@
     <title> Justin Liang - 9/25/25</title>
     <h1> Welcome! </h1>
     <a href="aboutme.html"> About me</a>
-    <a href="links.html"> Links</a>
+    <a href="labs.html"> Links</a>
+
 </html>
