--- a/links.html
+++ b/links.html
@@ -6,5 +6,6 @@
     </head>
     <title> Links </title>
     <a href="homepage.html"> Home </a> <br>
-    <a href="index.html"> Labs </a>
+    <a href="labs.html"> Labs </a>
+
 </html>
