--- a/links.html
+++ b/links.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <title> Links </title>
-    <a href="homepage.html"> Home </a> <br>
+    <a href="index.html"> Home </a> <br>
     <a href="labs.html"> Labs </a>
 
 </html>
+
