--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,6 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <title> About Me </title>
-    <a href="homepage.html"> Home </a>
+    <a href="index.html"> Home </a>
+
 </html>
