--- a/aboutme.html
+++ b/aboutme.html
@@ -6,5 +6,52 @@
     </head>
     <title> About Me </title>
     <a href="index.html"> Home </a>
-
+    <h1> Who Am I? </h1> <hr>
+    <p> Hello! My name is Justin. I am currently a rising senior at Brooklyn College,
+        studying Information Systems with a minor concentration in Multimedia Computing.
+        I've always had an undying passion for tech ever since childhood, and persistently
+        immersing myself within the industry. As for more professional experiences, I have
+        collaborated with numerous projects such as being an AI tester for a coaching
+        consultant, mPath-AI. Additionally, I've worked with groups to develop more of the 
+        front-end functionalities of websites. Programming languages I have experience with
+        are: Java, Python, HTML, CSS, JS, SQL. Moving on from the mundane parts about me,
+        some of my hobbies consist of playing guitar, piano, games, and exercising. 
+        I love playing volleyball, badminton, rock climbing, and biking. I am
+        someone that has a hard time keeping still both physically and mentally, so 
+        I tend to juggle new hobbies into the mix. 
+    </p> <br>
+    <p> Thank you for taking the time to read this!</p> <hr>
+    <h2> Bucketlist </h2>
+    <img class="sisyphus" src=https://miro.medium.com/1*Rk65L8jOBsMtzomJ0f52BA.jpeg>
+    <ul>
+        <li> Try new things </li>
+        <li> Improve in using software </li>
+        <li> Develop a game </li>
+        <li> Improving at art </li>
+        <li> Getting better at Chinese & Japanese </li>
+        <li> Getting better at music </li>
+        <li> Travel (Greece) </li>
+        <li> Frequent vacations with family </li>
+        <li> Maintain good health </li>
+        <li> Create something beautiful </li>
+    </ul> <hr>
+    <h3> Prospects </h3>
+    <table border="1">
+    <tr> <th> Career </th> <th> Description </th> <th> Requirements </th></tr>
+    <tr> <td> IT Technician </td> 
+        <td> Maintain computer systems, troubleshooting hardware, implementing cybersecurity. 
+        </td> <td> Bachelor's in IT, CS, or IS. CompTIA cerifications. </td> </tr>
+    <tr> <td> Game Developer </td> <td>  Developing interactive elements of a video game. 
+        This can include functions of an asset, graphics, or narrative.
+    </td> <td> Bachelor's in CS-related fields. Strong foundation in C#, C++, design. 
+        Experience with game engines such as: Unity, Unreal, Godot.
+    </td> </tr>
+    <tr> <td> Data Analyst </td> 
+        <td> Sort through large data sets and interpret 
+            information so that it can be intelligible. </td> 
+        <td> Bachelor's in CS-related fields. 
+            Strong foundation in SQL, 
+            Python, Spreadsheets, and Tablaeu. </td> </tr>
+    </table>
 </html>
+
