--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
     <title> Justin Liang - 9/25/25</title>
     <h1> Welcome! </h1>
-    <a href="aboutme.html"> About me</a>
+    <img src="https://assetsio.gnwcdn.com/pondering-my-orb-header-art.png?
+    width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp"
+    class="hermit">
+    <hr>
+    <br>
+    <a href="aboutme.html"> About me</a> <br> <br>
     <a href="links.html"> Links</a>
 
 </html>
-
