--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     </head>
     <title> Justin Liang - 9/25/25</title>
     <h1> Welcome! </h1>
-    <img src="https://assetsio.gnwcdn.com/pondering-my-orb-header-art.png?
-    width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp"
-    class="hermit">
+    <img src="https://64.media.tumblr.com/62c0250060e0910d8794c0815021d8b8/2bd3ffbfb8f4fe87-8e/s540x810/1c2584baab2b6566be840f6532d27760b0b2dda2.gifv"
+    class="spin">
     <hr>
     <br>
     <a href="aboutme.html"> About me</a> <br> <br>
     <a href="links.html"> Links</a>
-
 </html>
